# ARCube

./: .gitignore  CMakeLists.txt  README.md
AR1/data/yaml/: arthur.yaml  image.yaml  ph_arthur.yaml  webcam.yaml  webcam_iphone.yaml
AR1/include/: Calibration.hpp  Drawing.hpp  Pose.hpp  Quat.hpp  Utils.hpp
AR1/src/: Calibration.cpp  Drawing.cpp  Quat.cpp  Utils.cpp
ARCube/: CMakeLists.txt  main.cpp
ARDetect/: CMakeLists.txt  main.cpp
ARFinal/: CMakeLists.txt  Calibration.cpp  Calibration.hpp  Config.cpp  Config.hpp  Detection.cpp  Detection.hpp  Exceptions.hpp  MarkerRegistry.cpp  MarkerRegistry.hpp  Physics.cpp  Physics.hpp  PoseEstimation.cpp  PoseEstimation.hpp  RAII.cpp  RAII.hpp  Rendering.cpp  Rendering.hpp  main.cpp  main_extensible.cpp  marker_registry.yaml
ARMazeGame/: CMakeLists.txt  README.md
ARMazeGame/data/yaml/: default.yaml  hd_video.yaml  webcam.yaml
ARMazeGame/include/: Calibration.hpp  Detection.hpp  Drawing.hpp  GUI.hpp  Maze.hpp  Physics.hpp  Pose.hpp  Quat.hpp  Renderer.hpp  Utils.hpp
ARMazeGame/src/: Calibration.cpp  Detection.cpp  Drawing.cpp  GUI.cpp  Maze.cpp  Physics.cpp  Pose.cpp  Quat.cpp  Renderer.cpp  Utils.cpp  main.cpp
data/: ar_config.yaml  camera.yaml  config.yaml
data/yaml/: arthur_vert.yaml
include/: Detection.hpp
src/: Detection.cpp  Pose.cpp  main.cpp
